Fixed text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,7 @@ td {
 
     .profile-description {
         padding-top: 0px;
+        text-align: left;
     }
 
 
@@ -242,6 +243,7 @@ td {
    .profile-description {
        padding-left: 60px;
        width: 400px;
+       text-align: left;
    }
 
    .intro {
